# MotionRacer

./: CMakeLists.txt  HandTrackingModule.py  LICENSE  MotionRacer.sln  MotionRacer.vcxproj  README.md  hand_tracking_server.py
assets/: hand_tracking_server.py
header/: Car.h  Game.h  GameState.h  Menu.h  Obstacle.h  PowerUp.h
include/: Car.h  Game.h  GameState.h  Menu.h  Obstacle.h  PowerUp.h
src/: Car.cpp  Game.cpp  Main.cpp  Menu.cpp  Menu.h  Obstacle.cpp  PowerUp.cpp
